# slm_finetune_healthcare

./: .dockerignore  .gitignore  Dockerfile  README.md  ___no-dockerfile  build_log.txt  installer_script.sh  load.sh  main.py  pyproject.toml  start.sh
notebooks/: benchmark.ipynb  data_processing.ipynb  example.ipynb  medquad_fine_tune.ipynb  medquad_fine_tune.py  start.ipynb
notebooks/finetune_medgemma_slm/: finetune_llama_32_3b.ipynb  finetune_slm.ipynb  ft_ministral_3B_Instruct_2512_unsloth_bnb_4bit.ipynb
notebooks/phi-4-mini-instruct/: 01_inference.ipynb  02_finetune.ipynb
scripts/: benchmark.py  clear_batches_openai.py  custom_logger.py  distill_schema.py  distill_schema_resume.py  fine_tune_qwen3.5_4b_medquad.py  llm_judge.py  local_llm_judge.py  medquad_fine_tune.py  process_distilled_data.py  remove_duplicates.py  split_dataset.py  test_system.py  utils.py
scripts/distill_medgemma/: fine_tune_llama3.2_3b.py
scripts/distillation/medgemma/: distill.py  parser.py  validate_schema.py
scripts/phi-4-mini-instruct/: finetune.py
scripts/utils/: setup.py
