[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "groq>=1.2.0",
    "huggingface-hub>=1.13.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "openai>=2.34.0",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "torchvision>=0.25.0",
    "trl>=0.24.0",
    "unsloth[colab-new]",
    "wandb>=0.26.1",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
